[gd_scene load_steps=5 format=3 uid="uid://bx6cbauemxm5"]

[ext_resource type="Script" path="res://scenes/add_camera/add_camera.gd" id="1_62egi"]
[ext_resource type="Texture2D" uid="uid://di8liy4lcrnu" path="res://scenes/images/home.svg" id="2_q41j0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hkt0a"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3beay"]

[node name="AddCamera" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_62egi")

[node name="bg" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="bg"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="NavPanelContainer" type="VBoxContainer" parent="bg/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="home_button" type="Button" parent="bg/HBoxContainer/NavPanelContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
icon = ExtResource("2_q41j0")
flat = true
expand_icon = true

[node name="VSeparator" type="VSeparator" parent="bg/HBoxContainer"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/separator = SubResource("StyleBoxEmpty_hkt0a")

[node name="VBoxContainer" type="VBoxContainer" parent="bg/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="title" type="RichTextLabel" parent="bg/HBoxContainer/VBoxContainer"]
clip_contents = false
custom_minimum_size = Vector2(600, 0)
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/selection_color = Color(0.760784, 0.839216, 0.976471, 0.627451)
theme_override_font_sizes/normal_font_size = 60
text = "MetaCAM : ajouter cam√©ra"
fit_content = true
scroll_active = false
deselect_on_focus_loss_enabled = false

[node name="line_HSeparator" type="HSeparator" parent="bg/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 0

[node name="spacer_title_det_results" type="HSeparator" parent="bg/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 60
theme_override_styles/separator = SubResource("StyleBoxEmpty_3beay")

[node name="GridContainer" type="GridContainer" parent="bg/HBoxContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="CameraNameLabel" type="Label" parent="bg/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 23
text = "Nom : "

[node name="CameraNameLineEdit" type="LineEdit" parent="bg/HBoxContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
caret_blink = true

[node name="CameraLocationLabel" type="Label" parent="bg/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 23
text = "Emplacement : "

[node name="CameraLocationLineEdit" type="LineEdit" parent="bg/HBoxContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
caret_blink = true

[node name="MacAddressLabel" type="Label" parent="bg/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 23
text = "Addresse MAC : "

[node name="MacAddressLineEdit" type="LineEdit" parent="bg/HBoxContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
caret_blink = true

[node name="IpAddressLabel" type="Label" parent="bg/HBoxContainer/VBoxContainer/GridContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 23
text = "Adresse IP : "

[node name="IpAddressLineEdit" type="LineEdit" parent="bg/HBoxContainer/VBoxContainer/GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
caret_blink = true

[node name="spacer_fields_add_button" type="HSeparator" parent="bg/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 60
theme_override_styles/separator = SubResource("StyleBoxEmpty_3beay")

[node name="addCameraButton" type="Button" parent="bg/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Ajouter"

[node name="ErrorSuccessLabel" type="Label" parent="bg/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "..."

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="bg/HBoxContainer/NavPanelContainer/home_button" to="." method="_on_home_button_pressed"]
[connection signal="pressed" from="bg/HBoxContainer/VBoxContainer/addCameraButton" to="." method="_on_add_camera_button_pressed"]
